Fix flicker on iPhone

--- a/src/sass/portfolio_page/index.scss
+++ b/src/sass/portfolio_page/index.scss
@@ -18,6 +18,7 @@
       height: 100%;
       object-fit: cover;
       object-position: left;
+      transition: opacity 1s ease-in-out;
     }
 
     @media (width < $breakpoint) {
